--- a/wiki-viewer.html
+++ b/wiki-viewer.html
@@ -12,7 +12,7 @@
 		<input type="text" name="search" id="input">
 		<div>
 			<button id="search">Search</button>
-			<button id="random" onclick="randomPage();">Random</button>
+			<button id="random">Random</button>
 			
 		</div>
 	</div>
