--- a/wiki-viewer.html
+++ b/wiki-viewer.html
@@ -14,6 +14,9 @@
 			<button id="search">Search</button>
 			<button id="random">Random</button>
 			
+			<ul id="output">
+				
+			</ul>
 		</div>
 	</div>
 </div>
