--- a/wiki-viewer.html
+++ b/wiki-viewer.html
@@ -3,22 +3,41 @@
 <head>
 	<title>Wikipedia Viewer</title>
 	<link rel="stylesheet" type="text/css" href="wiki-viewer.css">
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	
+	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+	
 	<script src="wiki-viewer.js"></script>
 </head>
 <body>
-<div class="container">
+<div class="container container-fluid">
 	<div class="content">
 		<h1>Wikipedia Viewer</h1>
+		<br>
 		<input type="text" name="search" id="input">
+		<br>
 		<div>
-			<button id="search">Search</button>
-			<button id="random">Random</button>
+			<div class="btn btn-default" id="search">Search Wikipedia</div>
+			<div class="btn btn-default" id="random">Random Article</div>
 			
 			<ul id="output">
 				
 			</ul>
 		</div>
 	</div>
+
+	<div class="footer">
+			<p class="copyright col-md-6">© Designed and coded with love by Tanisha Hampden. All Rights Reserved, 2017.</p>
+
+			<div class="social col-md-6">
+				<i class="fa fa-github fa-2x" aria-hidden="true"></i>
+				<i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+				<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+				<i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+
+			</div>
+		</div>
 </div>
 
 </body>
